# VyxalBot3

./: .gitignore  .sample.env  README.md  pyproject.toml
.github/workflows/: codeql.yml
prisma/: schema.prisma
vyxalbot3/: __init__.py  __main__.py  launch.py  settings.py  util.py
vyxalbot3/commands/: __init__.py  dispatcher.py  messages.py  parser.py  statuses.txt
vyxalbot3/commands/parser/: __init__.py  grammar.lark
vyxalbot3/github/: __init__.py  formatters.py  webhook.py
