[tool.poetry]
name = "vyxalbot3"
version = "0"
description = ""
authors = ["Ginger <75683114+gingershaped@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sechat = {git = "https://github.com/gingershaped/sechat", rev = "v3"}
gidgethub = "^5.3.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.22.1"}
pydantic-settings = "^2.6.1"
aiohttp = "^3.11.9"
rich = "^13.9.4"
uwuipy = "^0.1.9"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
