[tool.poetry]
name = "vyxalbot3"
version = "0"
description = ""
authors = ["Ginger <75683114+gingershaped@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sechat = {git = "https://github.com/gingershaped/sechat", rev = "v3"}
gidgethub = "^5.3.0"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.0"
aiohttp = "^3.11.11"
rich = "^13.9.4"
uwuipy = "^0.1.9"
prisma = "^0.15.0"
asciitree = "^0.3.3"
lark = "^1.2.2"
bs4 = "^0.0.2"
lxml = "^5.3.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
