[project]
name = "vyxalbot3"
version = "0"
description = ""
authors = [{ name = "Ginger" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "sechat @ git+https://github.com/gingershaped/sechat.git@v3",
    "gidgethub (>=5.3.0,<6.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "uwuipy (>=0.1.10,<0.2.0)",
    "prisma (>=0.15.0,<0.16.0)",
    "asciitree (>=0.3.3,<0.4.0)",
    "lark (>=1.2.2,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "lxml (>=5.4.0,<6.0.0)",
    "returncache (>=1.0.0,<2.0.0)",
]

[project.scripts]
vyxalbot3 = "vyxalbot3.launch:launch"

[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
black = "^25.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
